--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
   "cSpell.words": [
-    "filterproduct",
-    "singleproducts"
+    "Ecommerce",
+    "filterproduct"
   ],
   "workbench.colorCustomizations": {},
   "json.schemas": []
